@@ -1,3 +1,9 @@
+jalv (1.4.7) unstable;
+
+  * Exit on jack shutdown
+
+ -- David Robillard <d@drobilla.net>  Fri, 26 Sep 2014 22:36:07 -0400
+
 jalv (1.4.6) stable;
 
   * Show newly saved presets in the preset menu
